--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "1.1.5",
     "reactotron-react-js": "^2.1.1",
     "reactotron-redux": "^2.1.0",
+    "reactotron-redux-saga": "^2.1.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0"
   },
